--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script>
+      tailwind = {
+        config: {
+          darkMode: 'class',
+          theme: {
+            extend: {}
+          }
+        }
+      };
+    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
     %sveltekit.head%
   </head>
-  <body>
+  <body class="bg-slate-950 text-slate-100 antialiased">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
   </html>
