--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,61 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&family=Inter:wght@300;400;500;600;700&family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <script>
       tailwind = {
         config: {
           darkMode: 'class',
           theme: {
-            extend: {}
+            extend: {
+              fontFamily: {
+                sans: ['Inter', 'ui-sans-serif', 'system-ui', 'sans-serif'],
+                serif: ['"EB Garamond"', 'ui-serif', 'Georgia', 'serif'],
+                display: ['Poppins', 'Inter', 'ui-sans-serif', 'system-ui']
+              },
+              colors: {
+                accent: 'rgb(var(--accent) / <alpha-value>)',
+                accent2: 'rgb(var(--accent2) / <alpha-value>)',
+                bgfrom: 'rgb(var(--bg-from) / <alpha-value>)',
+                bgto: 'rgb(var(--bg-to) / <alpha-value>)'
+              },
+              keyframes: {
+                breathing: {
+                  '0%, 100%': { transform: 'scale(1)', opacity: '0.85' },
+                  '50%': { transform: 'scale(1.02)', opacity: '1' }
+                },
+                'gradient-drift': {
+                  '0%': { backgroundPosition: '0% 50%' },
+                  '50%': { backgroundPosition: '100% 50%' },
+                  '100%': { backgroundPosition: '0% 50%' }
+                },
+                'soft-parallax': {
+                  '0%, 100%': { transform: 'translateY(0px)' },
+                  '50%': { transform: 'translateY(-4px)' }
+                },
+                ripple: {
+                  '0%': { transform: 'scale(0.95)', opacity: '0.6' },
+                  '100%': { transform: 'scale(1.2)', opacity: '0' }
+                },
+                'fade-delayed': {
+                  '0%': { opacity: '0', transform: 'translateY(6px)' },
+                  '100%': { opacity: '1', transform: 'translateY(0)' }
+                }
+              },
+              animation: {
+                breathing: 'breathing calc(var(--anim-speed,1) * 3.2s) ease-in-out infinite',
+                'breathing-slow': 'breathing calc(var(--anim-speed,1) * 4.5s) ease-in-out infinite',
+                drift: 'gradient-drift 12s ease-in-out infinite',
+                parallax: 'soft-parallax 6s ease-in-out infinite',
+                ripple: 'ripple 600ms ease-out',
+                'fade-delayed': 'fade-delayed 420ms ease-out both'
+              },
+              dropShadow: {
+                glow: ['0 0 15px rgba(var(--glow),0.35)']
+              }
+            }
           }
         }
       };
@@ -17,6 +66,56 @@
     %sveltekit.head%
   </head>
   <body class="bg-slate-950 text-slate-100 antialiased">
+    <style>
+      :root {
+        --accent: 99 102 241; /* thoughtful default */
+        --accent2: 16 185 129;
+        --bg-from: 2 6 23;
+        --bg-to: 30 41 59;
+        --glow: 99 102 241;
+        --anim-speed: 1;
+      }
+      [data-mood='happy'] {
+        --accent: 20 184 166;
+        --accent2: 50 180 90;
+        --bg-from: 18 24 38;
+        --bg-to: 6 95 70;
+        --glow: 16 185 129;
+        --anim-speed: 1.0;
+      }
+      [data-mood='reflective'] {
+        --accent: 147 112 219;
+        --accent2: 91 76 175;
+        --bg-from: 9 9 14;
+        --bg-to: 36 24 54;
+        --glow: 147 112 219;
+        --anim-speed: 0.9;
+      }
+      [data-mood='motivational'] {
+        --accent: 20 184 166;
+        --accent2: 234 179 8;
+        --bg-from: 10 12 20;
+        --bg-to: 5 150 105;
+        --glow: 20 184 166;
+        --anim-speed: 1.05;
+      }
+      [data-mood='low'] {
+        --accent: 30 58 138;
+        --accent2: 21 128 61;
+        --bg-from: 2 6 23;
+        --bg-to: 15 23 42;
+        --glow: 30 58 138;
+        --anim-speed: 0.85;
+      }
+      [data-mood='thoughtful'] {
+        --accent: 99 102 241;
+        --accent2: 16 185 129;
+        --bg-from: 2 6 23;
+        --bg-to: 30 41 59;
+        --glow: 99 102 241;
+        --anim-speed: 0.95;
+      }
+    </style>
     <div style="display: contents">%sveltekit.body%</div>
   </body>
   </html>
